--- a/firstWeb/src/main/webapp/index.html
+++ b/firstWeb/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <body>
     <form action="hello">
         Name : <input name="name" type="input"/>
-        <input type="submit" name="Submit" value="say hello">
+        <input type="submit" value="Send Content">
     </form>
 </body>
 </html>
